# tomato-toolkit

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  CHANGELOG.md  LICENSE  app.go  build.cmd  commitlint.config.cjs  dev.cmd  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wails.json
.github/workflows/: ci.yml  go.yml  release.yml
codegen/: codegen.go  db_test.go  mapping.go  package_info.go  type.go
crypt/: crypto.go
frontend/: .gitignore  .prettierrc  index.html  package.json  package.json.md5  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: HelloWorld.vue
frontend/src/layouts/: index.vue
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/styles/: index.css
frontend/src/types/: global-components.d.ts  mybatis-plus.ts  router-meta.d.ts
frontend/wailsjs/runtime/: runtime.d.ts  runtimedev.js
src/: App.tsx  App.vue  index.css  main.ts  main.tsx  useScrollbar.ts  useTheme.ts  userWorker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Userentity.java
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/codegen/: mod.rs
src-tauri/src/codegen/config/: builder.rs  mod.rs
src-tauri/src/codegen/mp/: command.rs  config.rs  config_builder.rs  context_data.rs  convert.rs  db_query.rs  mod.rs  model.rs  mp_generator.rs  mp_manager.rs  types.rs  utils.rs
src-tauri/src/codegen/mp/keywords/: mod.rs  mysql_keyword.rs  postgressql_keyword.rs
src-tauri/src/codegen/protocol/: db_query.rs  macros.rs  mod.rs  model.rs  types.rs
src-tauri/templates/: a.java  controller.java  entity.java  entity.kt.java  mapper.java  mapper.xml  service.java  serviceImpl.java
src/components/: Greet.vue
src/components/PageLayout/: index.tsx  index.vue
src/layout/: Aside.tsx  Breadcrumb.tsx  Header.tsx  THeader.vue  TMenu.vue  TSider.vue  aside.css  header.css  index.tsx  index.vue  type.ts
src/pages/dashboard/: index.vue
src/router/: index.ts  index.tsx  type.ts
src/store/: index.ts  ui.ts
src/store/modules/: injectConfig.ts
src/store/mp/: basicTable.ts  datasource.ts  global.ts  index.ts  injectConfig.ts  packageconfig.ts  strategy.ts  strategyconfig.ts  template.ts
src/types/: .eslintrc-auto-import.json  auto-import.d.ts  auto-imports.d.ts  components.d.ts  type.d.ts  vue-router.d.ts
src/utils/: renderRadio.tsx
sysinfo/: sysinfo.go
templates/: controller.java.tmpl  entity.java.tmpl  mapper.java.tmpl  mapper.xml.tmpl  service.impl.java.tmpl  service.java.tmpl
util/: logic.go  strings.go  strings_test.go
(+117 files in other folders)
