[package]
name = "tomato-toolkit"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-all", "path-all", "shell-all"] }
tera = "1.17.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "all"] }
anyhow = "1.0.68"
convert_case = "0.6.0"
dyn-fmt = "0.3.0"
derive_builder = { version = "0.12.0", features = ["clippy"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
