[package]
name = "tomato-toolkit"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-all", "dialog-open", "fs-all", "path-all", "shell-all"] }
tera = "1.17.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "all"] }
anyhow = "1.0.68"
convert_case = "0.6.0"
dyn-fmt = "0.3.0"
derive_builder = { version = "0.12.0", features = ["clippy"] }
async-trait = "0.1.63"
glob = "0.3.1"
regex = "1.7.1"
open = "3.2.0"
lazy_static = "1.4.0"
enum_dispatch = "0.3.11"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
